--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ny-times",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://abhinavadepu.github.io/demo-digital14",
+  "homepage": "http://abhinavadepu.github.io/demo_123",
   "dependencies": {
     "-": "0.0.1",
     "@testing-library/jest-dom": "^4.2.4",
